[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-inspector-egui = { version = "0.35.0", optional = true }
bevy_egui = { version = "0.38.1", optional = true }
ehttp = "0.6.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.148"

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = []
dev = ["dep:bevy-inspector-egui", "dep:bevy_egui"]
